--- a/lab-5/style.css
+++ b/lab-5/style.css
@@ -1,47 +1,18 @@
-* {
-    box-sizing: border-box;
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+
+body, html {
+    height: 100%;
+    line-height: 1.8;
 }
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Style the header */
-header {
-    background: rgb(112,167,223);
-    padding: 30px;
-    text-align: center;
-    font-size: 18px;
-    color: white;
-}
-
-article p {
-    background: rgb(188,230,139);
-    float: left;
-    width: 60%;
-    padding: 10px;
-    margin: 0;
-}
-
-article img {
-    background: rgb(147,177,113);
-    float: right;
-    width: 40%;
-    padding: 10px;
-}
-
-/* Clear floats after the columns */
-article::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/* Style the footer */
-footer {
-    background: rgb(64,242,194);
-    background-image: url("assets/kpi-18.jpeg");
-    background-repeat: no-repeat;
+/* Full height image header */
+.bgimg-1 {
+    background-position: center;
     background-size: cover;
-    height: 15vh;
+    background-image: url("assets/mac.jpg");
+    min-height: 100%;
+}
+
+.w3-bar .w3-button {
+    padding: 16px;
 }
